fix: fix gap on contacts__btn

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -216,6 +216,6 @@
   gap: 6px;
 
   @media screen and (min-width: $tablet-width) {
-    gap: 6px;
+    gap: 10px;
   }
 }
